WCAG validation. Fix isLeafElem and numberOfSameCharacters